--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@next/font": "13.1.2",
     "@react-three/drei": "^9.52.3",
     "@react-three/fiber": "^8.10.0",
